﻿[B]Version 1.1.66[/B]
pornhub - fix categories
pornez - fix
palimas - fix thumbnails